0.3.5
-----
    * Support for plugin version 0.14
    * Support for plugin version 1.0.0
    * Add support for build type specific source directory
0.3.4
-----
    * Support for product flavors
0.3.3
-----
    * Fix javaCompile task referencing Groovy sources
0.3.2
-----
    * Add support for Groovy compilation options
    * Fix joint compilation bug
    * Sources need to be in 'src/main/groovy'
0.3.1
-----
    * Make sure the plugin works with Android Tools 0.13+
    * support for androidTest
    * add the "groovy" sourceSet
0.3.0
-----
    * Support for Android library plugin