@@ -1,15 +1,15 @@
 version = 0.3.5-SNAPSHOT
-group = me.champeau.gradle
+group = org.codehaus.groovy
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
-project_vendor = melix
+project_vendor = groovy
 project_vendor_name = Cedric Champeau
 project_description = Adds support for the Groovy language to Android builds
-project_url = https://github.com/melix/groovy-android-gradle-plugin
-project_scm = https://github.com/melix/groovy-android-gradle-plugin
-project_issues_url = https://github.com/melix/groovy-android-gradle-plugin/issues
-project_connection = scm:git:https://github.com/melix/groovy-android-gradle-plugin.git
-project_dev_connection = scm:git:git@github.com:melix/groovy-android-gradle-plugin.git
+project_url = https://github.com/groovy/groovy-android-gradle-plugin
+project_scm = https://github.com/groovy/groovy-android-gradle-plugin
+project_issues_url = https://github.com/groovy/groovy-android-gradle-plugin/issues
+project_connection = scm:git:https://github.com/groovy/groovy-android-gradle-plugin.git
+project_dev_connection = scm:git:git@github.com:groovy/groovy-android-gradle-plugin.git
 project_bintray_repo = gradle-plugins
-project_bintray_org = melix
+project_bintray_org = groovy
