@@ -1,0 +1,1 @@
+implementation-class=groovyx.grooid.GroovyAndroidPlugin
