@@ -1,1 +1,0 @@
-implementation-class=me.champeau.gradle.GroovyAndroidPlugin
